--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         
     <body>
 
-        <h1>Welcome!</h1>
+        <div id=Menu>
+            <h5>Change Language: <a href="pt-br.html">PT/BR</a></h2>
+            <h1>Welcome!</h1>
+        </div>
 
             <div id=Presentation>
             <h2>This is Rodrigo Vilela Ferreira Website!</h2>
