trying to fix bugs

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
 
         <div id=Menu>
-            <h5>Change Language: <a href="pt-br.html">PT/BR</a></h2>
+            <h5>Change Language: <a href="pt-br.html">Portuguese</a></h2>
             <h1>Welcome!</h1>
         </div>
 
