--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
             <h3>List of my GitHub projects:</h3>
             <ul>
                 <li><a href="https://github.com/RodrigoVilelaFerreira/HMTL_Basics">HTML BASICS</a> </li>
+                Description: Files with the basics commands of HTML based on CS50's course for Web Programming
+                <li><a href="https://github.com/RodrigoVilelaFerreira/CSS_Basics">CSS BASICS</a> </li>
+                Description: Files with the basics commands of CSS based on CS50's course for Web Programming
+                <li><a href="https://github.com/RodrigoVilelaFerreira/Python_Basics">Python BASICS</a> </li>
+                Description: Files with the basics commands of Python based on CS50's course for Web Programming
             </ul>
-            Description: Files with the basics commands of HTML based on CS50's course for Web Programming
+            
             </div>
 
         <div id=Contact>
