--- a/pt-br.html
+++ b/pt-br.html
@@ -30,8 +30,12 @@
             <h3>Lista dos meus projetos do GitHub:</h3>
             <ul>
                 <li><a href="https://github.com/RodrigoVilelaFerreira/HMTL_Basics">Basicos HTML</a> </li>
+                Descrição: Arquivos com os comandos básicos de HTML baseados no curso do CS50's para Programação Web
+                <li><a href="https://github.com/RodrigoVilelaFerreira/CSS_Basics">Basicos  CSS</a> </li>
+                Descrição: Arquivos com os comandos básicos de HTML baseados no curso do CS50's para Programação Web
+                <li><a href="https://github.com/RodrigoVilelaFerreira/Python_Basics">Basicos Python</a> </li>
+                Descrição: Arquivos com os comandos básicos de HTML baseados no curso do CS50's para Programação Web
             </ul>
-            Descrição: Arquivos com os comandos básicos de HTML baseados no curso do CS50's para Programação Web
             </div>
 
         <div id=Contact>
