--- a/pt-br.html
+++ b/pt-br.html
@@ -21,7 +21,7 @@
             <h2>Este é o Website de Rodrigo Vilela Ferreira!</h2>
             <h3>Quem é Rodrigo Vilela Ferreira? Obrigado por perguntar!</h3>
             <p>
-                Sou brasileiro, estudante iniciante em programação, quase me formando em Ciências Contábeis na STRONG Business School e também sou um Artista 3D!
+                Sou brasileiro, estudante iniciante em programação, formado em Ciências Contábeis na STRONG Business School e também sou um Artista 3D!
                 <br> Este site é para apresentação dos meus projetos mais relevantes que estou trabalhando ou em que trabalhei!
             </p>
         </div>
