--- a/pt-br3dPortfolio.html
+++ b/pt-br3dPortfolio.html
@@ -53,15 +53,18 @@
                     <br> <b>Este projeto foi realizado sem nenhum custo monetário!</b>
 
                     <li><b>Garagem BeTGrave</b></li>
-                    Mundo VRChat
+                    Mundo VRChat criado para uma live especial do streamer <a href="https://www.twitch.tv/betgrave">BeTGrave</a>
                     <br> <b>Este projeto foi realizado sem nenhum custo monetário!</b>
 
                     <li><b>LvPadoru</b></li>
-                    Avatar VRChat
+                    Avatar para VRChat criado a partir da base <a href="https://booth.pm/ja/items/1720664">Padoru</a> para o streamer <a href="https://www.twitch.tv/lvcidu">LvCidu</a>
+                    além da edição de textura e shaders no unity e photoshop, também foi adicionado orelha e cauda, além de algumas modificações no blender.
                     <br> <b>Este projeto foi realizado sem nenhum custo monetário!</b>
                     
                     <li><b>NyanBTG</b></li>
-                    Avatar VRChat
+                    Edição do avatar VRChat <a href="https://stray-lamb.booth.pm/items/3162874">NyanSuka!</a>
+                    para o streamer <a href="https://www.twitch.tv/betgrave">BeTGrave</a>, sendo que foi necessário realizar
+                    apenas edição de texturas, adicionar um objeto e editar o .VRM que já veio junto do unitypack.
                     
                     <li><b>Donut</b></li>
                     Donut criado do zero através do blender, este projeto faz parte do tutorial de blender para inciantes do <a href="https://www.youtube.com/watch?v=TPrnSACiTJ4&list=PLjEaoINr3zgEq0u2MzVgAaHEBt--xLB6U&ab_channel=BlenderGuru">Blender Guru</a> 
