--- a/pt-brHubGit.html
+++ b/pt-brHubGit.html
@@ -25,7 +25,7 @@
             </thead>
         </div>
             
-            <h1>Bem Vindo(a)!</h1>
+            <h1>Projetos GitHub</h1>
 
             <div id=Presentation>
             <h2>Esta é uma lista dos meus projetos GitHub, fique à vontade para baixar e usar para consulta!</h2>
