--- a/3dPortfolio.html
+++ b/3dPortfolio.html
@@ -30,7 +30,7 @@
 
         <div id=Presentation>
             <h2> Under construction </h2>
-            <h3> This page is still under construction, but below is a list of the projects I've worked on so far </h3>
+            <h3> This page is still under construction, but below is a list of the projects I've worked on so far. </h3>
             </div>
 
             <div id=GitList>
