--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
                 <br>This website is for presentation of my more relevant projects I'm working or worked on!
             </p>
         </div>
+
+        <h3>FAQ:</h3>
+        <ul>
+            <li><b>Do you freelance?</b></li>
+            Yes I do Freelance of programming, spreadsheets, 3D art, Avatar and World VRChat.
+            <li><b>How much do you charge?</b></li>
+            I'm currently looking for challenges to improve my skills,
+            so normally the value is how much the client wants to pay for my work.
+            <br>However if the project requires paid software or templates, I ask that the person provide me with what is needed.
+            <li><b>How to get in touch with you?</b></li>
+            Below is both my professional Discord and my LinkedIn, I view both at least once a day.
+            You can ask me anything or even talk a little, don't be afraid.
+            
+        </ul>
+        </div>
     
         <div id=Contact>
             <h4>Feel free to contact me!</h4>
