--- a/pt-br3dPortfolio.html
+++ b/pt-br3dPortfolio.html
@@ -29,7 +29,7 @@
 
             <div id=Presentation>
             <h2>Em construção</h2>
-            <h3>Esta página ainda está sendo construida, mas abaixo está uma lista dos projetos que realizei até o momento </h3>
+            <h3>Esta página ainda está sendo construida, mas abaixo está uma lista dos projetos que realizei até o momento. </h3>
             </div>
 
             <div id=GitList>
