--- a/pt-brIndex.html
+++ b/pt-brIndex.html
@@ -36,6 +36,22 @@
             </p>
             </div>
     
+            <div id=GitList>
+                <h3>FAQ:</h3>
+                <ul>
+                    <li><b>Você faz freelance?</b></li>
+                    Sim eu faço Freelance de programação, planilhas, Photoshop, arte 3D, Avatar e Mundo VRChat.
+                    <li><b>Quanto você cobra?</b></li>
+                    No momento estou em busca de desafios para melhorar minhas habilidades, 
+                    então normalmente o valor é o quanto o cliente quer pagar pelo meu trabalho.
+                    <br>Entretanto se o projeto requer software ou modelos pagos, eu peço que a pessoa me forneça o que for necessário.
+                    <li><b>Como entrar em contato?</b></li>
+                    Abaixo está tanto meu Discord profissional quanto meu LinkedIn, eu visualizo ambos ao menos uma vez por dia.
+                    Pode me perguntar o que quiser ou até mesmo conversar, não tenha medo.
+                    
+                </ul>
+                </div>
+
         <div id=Contact>
             <h4>Sinta-se livre para me contatar!</h4>
             <ul>
