--- a/pt-br3dPortfolio.html
+++ b/pt-br3dPortfolio.html
@@ -35,7 +35,7 @@
             <div id=GitList>
                 <h3>Projetos 3D:</h3>
                 <ul>
-                    <li><b><a href="Pt-brLvMulicia.html">Estrutura para Rig</a></b></li>
+                    <li><b><a href="Pt-brLvMulicia.html">LvMulicia</a></b></li>
                     <img src=images/LvMulicia.png width=300 height=300>
                   
                     <li><b><a href="pt-brRig.html">Estrutura para Rig</a></b></li>
