--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
     <body>
 
-        <h5>Change Language: <a href="pt-br.html">Portuguese</a></h2>
+        <h5>Change Language: <a href="pt-brIndex.html">Portuguese</a></h2>
         
         <div id=Menu>
             <thead>
