updates english structure

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </p>
         </div>
 
+        <div id=GitList>
         <h3>FAQ:</h3>
         <ul>
             <li><b>Do you freelance?</b></li>
