--- a/pt-br3dPortfolio.html
+++ b/pt-br3dPortfolio.html
@@ -35,8 +35,8 @@
             <div id=GitList>
                 <h3>3D Projects:</h3>
                 <ul>
-                    <li><b><a href="pt-brLvMulicia.html">LvMulicia</a></b></li>
-                    <a href="pt-brLvMulicia.html">
+                    <li><b><a href="Pt-brLvMulicia.html">LvMulicia</a></b></li>
+                    <a href="Pt-brLvMulicia.html">
                         <img src=images/LvMulicia.png width=300 height=300>
                     </a>
                     
