--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2>This is Rodrigo Vilela Ferreira Website!</h2>
             <h3>Who is Rodrigo Vilela Ferreira? Thanks for ask!</h3>
             <p>
-                I'm a brazilian begginer student of programming, graduated in accountability on STRONG Business School and i'm a 3D Artist too!
+                I'm a brazilianm, 22 years old, begginer student of programming, graduated in accountability on STRONG Business School and i'm a 3D Artist too!
                 <br>This website is for presentation of my more relevant projects I'm working or worked on!
             </p>
         </div>
