--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <h1>Welcome!</h1>
 
             <div id=Presentation>
-            <h2>This is Rodrigo Vilela Ferreira Website!</h2>
-            <h3>Who is Rodrigo Vilela Ferreira? Thanks for ask!</h3>
+            <h2>This is Rodrigo Vilela Ferreira's Website!</h2>
+            <h3>Who is Rodrigo Vilela Ferreira? Thanks for asking!</h3>
             <p>
-                I'm a brazilian, 22 years old, begginer student of programming, graduated in accountability on STRONG Business School and i'm a 3D Artist too!
+                I'm a brazilian, 22 years old, begginer student of programming, graduated in accountability on STRONG Business School and I'm a 3D Artist too!
                 <br>This website is for presentation of my more relevant projects I'm working or worked on!
             </p>
         </div>
@@ -40,7 +40,7 @@
         <h3>FAQ:</h3>
         <ul>
             <li><b>Do you freelance?</b></li>
-            Yes I do Freelance of programming, spreadsheets, 3D art, Avatar and World VRChat.
+            Yes I do Freelance of programming, spreadsheets, 3D art, VRChat Avatars and VRChat Worlds.
             <li><b>How much do you charge?</b></li>
             I'm currently looking for challenges to improve my skills,
             so normally the value is how much the client wants to pay for my work.
