--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <h5>Change Language: <a href="pt-brIndex.html">Portuguese</a></h2>
         
-        <div id=Menu>
+        <div id=Menu class="navbar">
             <thead>
                 <tr>
                     <th><a href="index.html">Home</a></th>
