--- a/pt-brDonut.html
+++ b/pt-brDonut.html
@@ -14,7 +14,7 @@
 
         <h5>Escolha a linguagem: <a href="index.html">Inglês</a></h2>
         
-        <div id=Menu>
+        <div id=Menu class="navbar">
             <thead>
                 <tr>
                     <th><a href="pt-brIndex.html">Home</a></th>
