--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             I'm currently looking for challenges to improve my skills,
             so normally the value is how much the client wants to pay for my work.
             <br>However if the project requires paid software or templates, I ask that the person provide me with what is needed.
-            <li><b>How to contact with you?</b></li>
+            <li><b>How to contact?</b></li>
             Below is both my professional Discord and my LinkedIn, I view both at least once a day.
             You can ask me anything or even talk a little, don't be afraid.
             
