--- a/Pt-brLvMulicia.html
+++ b/Pt-brLvMulicia.html
@@ -12,14 +12,15 @@
         
     <body>
 
-        <h5>Escolha a linguagem: <a href="index.html">Inglês</a></h2>
+        <h5>Escolha a linguagem: <a href="index.html"><button class="MenuBTN"> <b>Inglês</b></a></h2>
         
         <div id=Menu class="navbar">
             <thead>
                 <tr>
-                    <th><a href="pt-brIndex.html">Home</a></th>
-                    <th><a href="pt-br3dPortfolio.html">3D Portfolio</a></th>
-                    <th><a href="pt-brHubGit.html">GitHub</a></th>
+                    <th><a href="pt-brIndex.html"> <button class="MenuBTN"> <b> Home</b> </button></a></th>
+                    <th><a href="pt-br3dPortfolio.html"><button class="MenuBTN"> <b>3D Portfolio</b> </button></a></th>
+                    <th><a href="pt-brHubGit.html"><button class="MenuBTN"> <b>GitHub</b> </button></a></th>
+
 
                 </tr>
             </thead>
