--- a/3dPortfolio.html
+++ b/3dPortfolio.html
@@ -12,14 +12,15 @@
         
     <body>
 
-        <h5>Change Language: <a href="pt-br3dPortfolio.html">Portuguese</a></h2>
+        <h5>Change Language: <a href="pt-br3dPortfolio.html"><button class="MenuBTN"> <b>Portuguese</b></a></h5>
         
         <div id=Menu class="navbar">
             <thead>
                 <tr>
-                    <th><a href="index.html">Home</a></th>
-                    <th><a href="3dPortfolio.html">3D Portfolio</a></th>
-                    <th><a href="hubGit.html">GitHub</a></th>
+                    <th><a href="index.html"> <button class="MenuBTN"> <b> Home</b> </button></a></th>
+                    <th><a href="3dPortfolio.html"><button class="MenuBTN"> <b>3D Portfolio</b> </button></a></th>
+                    <th><a href="hubGit.html"><button class="MenuBTN"> <b>GitHub</b> </button></a></th>
+
 
                 </tr>
             </thead>
@@ -33,8 +34,8 @@
             <h3> This page is still under construction, but below is a list of the projects I've worked on so far. </h3>
             </div>
 
-            <div id=GitList>
-                <h3>3D Projects:</h3>
+            <div id=Portfolio3d>
+                <h3>3D Projects (click on the name or image to show details): </h3>
                 <ul>
                     <li><b><a href="LvMulicia.html" class="link">LvMulicia</a></b></li>
                     <a href="LvMulicia.html">
