--- a/Donut.html
+++ b/Donut.html
@@ -12,14 +12,15 @@
         
     <body>
 
-        <h5>Change Language: <a href="pt-br3dPortfolio.html">Portuguese</a></h2>
+        <h5>Change Language: <a href="pt-br3dPortfolio.html"><button class="MenuBTN"> <b>Portuguese</b></a></h5>
         
         <div id=Menu class="navbar">
             <thead>
                 <tr>
-                    <th><a href="index.html">Home</a></th>
-                    <th><a href="3dPortfolio.html">3D Portfolio</a></th>
-                    <th><a href="hubGit.html">GitHub</a></th>
+                    <th><a href="index.html"> <button class="MenuBTN"> <b> Home</b> </button></a></th>
+                    <th><a href="3dPortfolio.html"><button class="MenuBTN"> <b>3D Portfolio</b> </button></a></th>
+                    <th><a href="hubGit.html"><button class="MenuBTN"> <b>GitHub</b> </button></a></th>
+
 
                 </tr>
             </thead>
