--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
 
     <body>
 
-        <h5>Change Language: <a href="pt-brIndex.html">Portuguese</a></h5>
+        
+        <h5>Change Language:<a href="pt-brIndex.html"><button class="MenuBTN"><b>Portuguese</b></button></a></h5>
 
-        <div id=Menu class="navbar">
+        <div id=Menu class=navbar>
             <thead>
                 <tr>
-                    <th><a href="index.html">Home</a></th>
-                    <th><a href="3dPortfolio.html">3D Portfolio</a></th>
-                    <th><a href="hubGit.html">GitHub</a></th>
+                    <th><a href="index.html"> <button class="MenuBTN"> <b> Home</b> </button></a></th>
+                    <th><a href="3dPortfolio.html"><button class="MenuBTN"> <b>3D Portfolio</b> </button></a></th>
+                    <th><a href="hubGit.html"><button class="MenuBTN"> <b>GitHub</b> </button></a></th>
+
 
                 </tr>
             </thead>
         </div>
             
+
             <h1>Welcome!</h1>
+
 
             <div id=Presentation>
             <h2>This is Rodrigo Vilela Ferreira's Website!</h2>
