--- a/pt-br3dPortfolio.html
+++ b/pt-br3dPortfolio.html
@@ -35,8 +35,8 @@
             <h3>Esta página ainda está sendo construida, mas abaixo está uma lista dos projetos que realizei até o momento. </h3>
             </div>
 
-            <div id=GitList>
-                <h3>3D Projects:</h3>
+            <div id=Portfolio3d>
+                <h3>3D Projects (clique no nome ou imagem para mostrar detalhes):</h3>
                 <ul>
                     <li><b><a href="Pt-brLvMulicia.html" class="link">LvMulicia</a></b></li>
                     <a href="Pt-brLvMulicia.html">
