change language fix

--- a/pt-brGaragemBTG.html
+++ b/pt-brGaragemBTG.html
@@ -12,7 +12,7 @@
         
     <body>
 
-        <h5>Escolha a linguagem: <a href="index.html"><button class="MenuBTN"> <b>Inglês</b></a></h2>
+        <h5>Escolha a linguagem: <a href="GaragemBTG.html"><button class="MenuBTN"> <b>Inglês</b></a></h2>
         
         <div id=Menu class="navbar">
             <thead>
