--- a/NyanBTG.html
+++ b/NyanBTG.html
@@ -12,7 +12,7 @@
         
     <body>
 
-        <h5>Change Language: <a href="pt-br3dPortfolio.html"><button class="MenuBTN"> <b>Portuguese</b></button></a></h5>
+        <h5>Change Language: <a href="pt-brNyanBTG.html"><button class="MenuBTN"> <b>Portuguese</b></button></a></h5>
         
         <div id=Menu class="navbar">
             <thead>
