--- a/pt-brBlakeJoody.html
+++ b/pt-brBlakeJoody.html
@@ -12,7 +12,7 @@
         
     <body>
 
-        <h5>Escolha a linguagem: <a href="BlakeJoody.html"><button class="MenuBTN"> <b>Inglês</b></a></h2>
+        <h5>Mude a linguagem: <a href="BlakeJoody.html"><button class="MenuBTN"> <b>Inglês</b></a></h2>
         
         <div id=Menu class="navbar">
             <thead>
