--- a/Pt-brLvMulicia.html
+++ b/Pt-brLvMulicia.html
@@ -17,7 +17,7 @@
         <div id=Menu class="navbar">
             <thead>
                 <tr>
-                    <th><a href="pt-brIndex.html"> <button class="MenuBTN"> <b> Home</b> </button></a></th>
+                    <th><a href="pt-brHome.html"> <button class="MenuBTN"> <b> Home</b> </button></a></th>
                     <th><a href="pt-br3dPortfolio.html"><button class="MenuBTN"> <b>3D Portfolio</b> </button></a></th>
                     <th><a href="pt-brHubGit.html"><button class="MenuBTN"> <b>GitHub</b> </button></a></th>
 
