--- a/GaragemBTG.html
+++ b/GaragemBTG.html
@@ -17,7 +17,7 @@
         <div id=Menu class="navbar">
             <thead>
                 <tr>
-                    <th><a href="index.html"> <button class="MenuBTN"> <b> Home</b> </button></a></th>
+                    <th><a href="Home.html"> <button class="MenuBTN"> <b> Home</b> </button></a></th>
                     <th><a href="3dPortfolio.html"><button class="MenuBTN"> <b>3D Portfolio</b> </button></a></th>
                     <th><a href="hubGit.html"><button class="MenuBTN"> <b>GitHub</b> </button></a></th>
 
