--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodrigo Vilela Ferreira</title>
         
-    <link rel="stylesheet" href="styleIndex.css">
+    <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body id="Index">
 
 
 
@@ -19,7 +19,7 @@
         <video id="background" autoplay muted loop id="Intro">
             <source src="Videos/intro.mp4" type="video/mp4">
         </video>
-    </header>
+    </header id="headerIndex">
 
         <div id=Content>
             
