--- a/pt-brIndex.html
+++ b/pt-brIndex.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rodrigo Vilela Ferreira</title>
         
-    <link rel="stylesheet" href="styleIndex.css">
+    <link rel="stylesheet" href="style.css">
     </head>
 
-    <body>
+    <body id="Index">
 
     <header>
         <video id="background" autoplay muted loop id="Intro">
