--- a/pt-brIndex.html
+++ b/pt-brIndex.html
@@ -19,7 +19,7 @@
 
         <div id=Content>
             
-            <h1>Bem vindo(a)!</h1>
+            <h1> Este site foi criado inteiramente sem templates!</h1>
                 
             <h2>Bem vindo(a)! ao website de Rodrigo Vilela Ferreira!</h2>
             <h3>Escolha seu idioma:</h3>
