--- a/pt-brIndex.html
+++ b/pt-brIndex.html
@@ -23,7 +23,7 @@
             <h2>Escolha seu idioma:</h2>
             <tr>
                 <th><a href="pt-brHome.html"><button class="MenuBTN"><b>Português</b></button></a></th>
-                <th><a href="Home.html"><button class="MenuBTN"> <b>English</b></a></th>
+                <th><a href="Home.html"><button class="MenuBTN"> <b>English</b></button></a></th>
                 
 
             </tr>
