--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h2>Select your language:</h2>
             <tr>
                 <th><a href="pt-brHome.html"><button class="MenuBTN"><b>Português</b></button></a></th>
-                <th><a href="Home.html"><button class="MenuBTN"> <b>English</b></a></th>
+                <th><a href="Home.html"><button class="MenuBTN"> <b>English</b></button></a></th>
             </tr>
 
         </div>
