FoxGenerator added footer

--- a/FoxGenerator/index.html
+++ b/FoxGenerator/index.html
@@ -17,6 +17,10 @@
 			<img id="fox" /><br />
 			<button id="change-fox">Change fox</button>
 		</main>
+
+		<footer> 
+			<p> &copy; Rodrigo Vilela Ferreira, 2022 | API:https://randomfox.ca</p>
+		</footer>
 		<script src="scriptsOtherWay.js"></script>
 	</body>
 </html>
